# requests-kerberos

./: .gitignore  .travis.sh  .travis.yml  AUTHORS  HISTORY.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_requests_kerberos.py
.github/workflows/: ci.yml
ci/: setup-kerb.sh
requests_kerberos/: __init__.py  kerberos.py  kerberos_.py
tests/: test_functional_kerberos.py  test_requests_kerberos.py
